--- a/src/index.scss
+++ b/src/index.scss
@@ -50,6 +50,24 @@ a {
         width: 300px;
         height: 270px
     }
+}
 
+.cart-items-container {
+    position: absolute;
+    top: 100px;
+    right: 50px;
+    width: 200px;
+    padding: 20px;
+    text-align: center;
+}
 
+.cart-item {
+    background-color: chartreuse;
+    text-align: left;
+    padding: 10px;
+    margin-bottom: 3px;
+    border-radius: 3px;
+    span {
+        float: right;
+    }
 }
